# REDOX-RoboCup-RMRC-2022

./: README.md
Machine Vision/Machine Vision/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Claw.h  Gamepad_controller.h  Hazmat_detection.h  MACHINE_VISION.cpp  MV_INTERFACE.cpp  Machine Vision.vcxproj  Machine Vision.vcxproj.filters  Makefile  Mode_switcher.h  Motion_detection.h  QR_read.cpp  QR_read.h  REDOX_INTERFACE.cpp  ROS_communication.h  Realsense_images.h  Redox  Screen_resolution.h  Serial_communication.h  Servos_controller.h  Thermal_gas.h  cmake_install.cmake  qr_results.txt  serialib.cpp  serialib.h
Machine Vision/Machine Vision/SDL2/: SDL_config.h  SDL_revision.h
Machine Vision/Machine Vision/atomic_configure/: .rosinstall  setup.sh
Machine Vision/Machine Vision/catkin_generated/: generate_cached_setup.py  setup_cached.sh
Machine Vision/Machine Vision/devel/: local_setup.sh
Machine Vision/Machine Vision/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Machine Vision/Machine Vision/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Machine Vision/Machine Vision/opencv2/: cvconfig.h  opencv_modules.hpp
Machine Vision/Machine Vision/ros_include/amcl/: AMCLConfig.h
Machine Vision/Machine Vision/ros_include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
Machine Vision/Machine Vision/ros_include/dynamic_reconfigure/: TestConfig.h
Machine Vision/Machine Vision/ros_include/gazebo_video_monitor_msgs/: Pose.h  SetCamera.h  StopRecording.h  (+11 more)
PS5 Controller Test/: CMakeLists.txt
(+638 files in other folders)
